tests/negative/test_sizeof_undef.orb
data Foo;

fnc main () () {
    sizeOf Foo;
};